force-app/main/default/objects/Agreement_Action_Mapping__mdt/Agreement_Action_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Agreement Action Mapping</description>
    <label>Agreement Action Mapping</label>
    <pluralLabel>Agreement Action Mappings</pluralLabel>
</CustomObject>