force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/Additional_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Additional_Exclusion__c</fullName>
    <inlineHelpText>Enter Additional Exclusion criteria to used for Action visibility.</inlineHelpText>
    <label>Additional Exclusion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>