force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/Additional_Inclusion__c.field-meta.xml
<CustomField>
    <fullName>Additional_Inclusion__c</fullName>
    <inlineHelpText>Enter Additional Inclusion criteria to used for Action visibility</inlineHelpText>
    <label>Additional Inclusion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>