force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/Agreement_Action__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Action__c</fullName>
    <inlineHelpText>Enter Agreement Action here for which you want to control visibility by Process/Business flow.</inlineHelpText>
    <label>Agreement Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generate</fullName>
                <default>true</default>
                <label>Generate</label>
            </value>
            <value>
                <fullName>Regenerate</fullName>
            </value>
            <value>
                <fullName>Import Offline Document</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Preview</fullName>
            </value>
            <value>
                <fullName>Generate Supporting Document</fullName>
            </value>
            <value>
                <fullName>Activate</fullName>
            </value>
            <value>
                <fullName>Submit Request</fullName>
            </value>
            <value>
                <fullName>Send For eSignature</fullName>
            </value>
            <value>
                <fullName>Send For Wet Signatures</fullName>
            </value>
            <value>
                <fullName>Preview &amp; Submit Approvals</fullName>
            </value>
            <value>
                <fullName>My Approvals</fullName>
            </value>
            <value>
                <fullName>Send For Review</fullName>
            </value>
            <value>
                <fullName>Check eSignature Status</fullName>
            </value>
            <value>
                <fullName>Recall E-Signature Request</fullName>
            </value>
            <value>
                <fullName>Recall eSignature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>