force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/Agreement_Process_Flow_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Process_Flow_Short_Name__c</fullName>
    <inlineHelpText>Enter short name for the process flow for which you want to control visibility. You can add multiple process flows separated by comma.</inlineHelpText>
    <label>Agreement Process Flow Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>