force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <inlineHelpText>Enter Agreement Status one or more separated by comma for which you want to control visibility.</inlineHelpText>
    <label>Agreement Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>