force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/Agreement_Status_Category__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status_Category__c</fullName>
    <inlineHelpText>Enter Agreement Status Category one or more separated by comma for which you want to control visibility.</inlineHelpText>
    <label>Agreement Status Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>