force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <inlineHelpText>Enter Agreement Approval  status one or more separated by comma for which you want to control visibility for Approval related actions.</inlineHelpText>
    <label>Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>