force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/DocuSignLink__c.field-meta.xml
<CustomField>
    <fullName>DocuSignLink__c</fullName>
    <label>DocuSignLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>