force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/EchosignLink__c.field-meta.xml
<CustomField>
    <fullName>EchosignLink__c</fullName>
    <label>EchosignLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>