force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/eSignatureApp__c.field-meta.xml
<CustomField>
    <fullName>eSignatureApp__c</fullName>
    <label>eSignatureApp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>