force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/Inclusion_Or_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Inclusion_Or_Exclusion__c</fullName>
    <inlineHelpText>This is more for information to admin, indicating how the condition has been used for controlling action visibility based on the values provided in other fields.</inlineHelpText>
    <label>Inclusion Or Exclusion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
                <default>true</default>
                <label>Include</label>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>