force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/Lightning_Link__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Link__c</fullName>
    <inlineHelpText>Enter link for Salesforce Lightning UI.</inlineHelpText>
    <label>Lightning Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>