force-app/main/default/objects/Agreement_Action_Mapping__mdt/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <inlineHelpText>Enter link for Salesforce classic UI.</inlineHelpText>
    <label>Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>