force-app/main/default/objects/Agreement_Action_Mapping__mdt/listViews/All_Columns.listView-meta.xml
<ListView>
    <fullName>All_Columns</fullName>
    <columns>Agreement_Action__c</columns>
    <columns>Agreement_Process_Flow_Short_Name__c</columns>
    <columns>Agreement_Status_Category__c</columns>
    <columns>Agreement_Status__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Inclusion_Or_Exclusion__c</columns>
    <columns>Lightning_Link__c</columns>
    <columns>Link__c</columns>
    <columns>Additional_Exclusion__c</columns>
    <columns>Additional_Inclusion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Columns</label>
    <language>en_US</language>
</ListView>